--- a/index.html
+++ b/index.html
@@ -18,13 +18,27 @@
         <li><a href="contato.html" class="menu-btn">Contato</a></li>
       </ul>
       <div class="menu-btn">
-        <i class="fa-solid fa-bars"></i>
+        <i class="fas fa-bars"></i>
       </div>
     </div>
   </nav>
-  <div class="text-test">
-    Teste
-  </div>
+
+  <section class="top">
+    <div class="max-width">
+      <div class="top-content">
+        <div class="text-1">Temos a Solução</div>
+        <div class="text-2">que a sua empresa precisa</div>
+        <div class="text-3">Podemos ajudar a sua empresa!</div>
+        <a href="contato.html">Entrar em Contato</a>
+      </div>
+    </div>
+  </section>
+
+  <div class="text-test">Teste</div>
+  <div class="text-test">Teste</div>
+  <div class="text-test">Teste</div>
+  <div class="text-test">Teste</div>
+  <div class="text-test">Teste</div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/custom.js"></script>
