--- a/index.html
+++ b/index.html
@@ -34,6 +34,37 @@
     </div>
   </section>
 
+  <section class="services">
+    <div class="max-width">
+      <h2 class="title">Serviços</h2>
+      <div class="serv-content">
+        <div class="card">
+          <div class="box">
+            <i class="fa-solid fa-wifi"></i>
+            <div class="text">Wifi veloz</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi saepe ipsum ab eius magni odit odio.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <i class="fa-solid fa-rocket"></i>
+            <div class="text">Espaço inspirador</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi saepe ipsum ab eius magni odit odio.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <i class="fa-solid fa-handshake-simple"></i>
+            <div class="text">Reuniões</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi saepe ipsum ab eius magni odit odio.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="text-test">Teste</div>
   <div class="text-test">Teste</div>
   <div class="text-test">Teste</div>
