feature/section-servicoPremium

--- a/index.html
+++ b/index.html
@@ -64,12 +64,25 @@
       </div>
     </div>
   </section>
-
-  <div class="text-test">Teste</div>
-  <div class="text-test">Teste</div>
-  <div class="text-test">Teste</div>
-  <div class="text-test">Teste</div>
-  <div class="text-test">Teste</div>
+  
+  <section class="premium">
+    <div class="max-width">
+      <h2 class="title">Serviço Premium</h2>
+      <div class="premium-content">
+        <div class="column left">
+          <img src="images/imagem1.jpg" alt="Serviço premium">
+        </div>
+        <div class="column right">
+          <div class="text">
+            Desenvolvido para você atingir seus melhores índices de produtividade,
+            criatividade e bem-estar. 
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et natus odio exercitationem, quas, ducimus, quod aliquid enim dolorum temporibus eos deleniti eligendi repellendus porro molestias deserunt! Error blanditiis accusamus doloremque? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam nostrum facere dolores, eum ea dolor minima provident veniam, nihil veritatis fuga eveniet reiciendis, animi voluptates doloribus eligendi voluptatibus commodi cumque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae obcaecati, amet et veritatis omnis architecto, rem aperiam aliquam nulla dolor nisi ducimus suscipit eum blanditiis magni necessitatibus ratione unde. Tenetur.</p>
+          <a href="contato.html">Contato</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/custom.js"></script>
