--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
     </div>
   </section>
 
+  <footer>
+    <span>Create By <a href="index.html"> OliveiraSW</a></span>
+  </footer>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/custom.js"></script>
 </body>
