--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,83 @@
       </div>
     </div>
   </nav>
-  <h1>Contato</h1>
+
+  <section class="contact">
+    <div class="max-width">
+      <h2 class="title">Contato</h2>
+      <div class="contact-content">
+        <div class="column left">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="icons">
+            <div class="row">
+              <i class="fa-solid fa-user"></i>
+              <div class="info">
+                <div class="head">
+                  Empresa
+                </div>
+                <div class="sub-title">
+                  OliveiraSw
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <i class="fa-solid fa-location-dot"></i>
+              <div class="info">
+                <div class="head">
+                  Endereço
+                </div>
+                <div class="sub-title">
+                  Rua Capitão Zuzinha
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <i class="fa-solid fa-envelope"></i>
+              <div class="info">
+                <div class="head">
+                  E-mail
+                </div>
+                <div class="sub-title">
+                  staff@oliveirasw.com.br
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column right">
+          <div class="text">
+            Mensagem de Contato
+          </div>
+          <form>
+            <div class="fields">
+              <div class="field name">
+                <input type="text" placeholder="Digite o nome" required> 
+              </div>
+              <div class="field email">
+                <input type="email" placeholder="Digite o E-mail" required> 
+              </div>
+            </div>
+            <div class="field">
+              <input type="text" placeholder="Digite o Assunto" required> 
+            </div>
+            <div class="field textarea">
+              <textarea cols="30" rows="10" placeholder="Digite o Conteúdo" required></textarea> 
+            </div>
+            <div class="button-area">
+              <button type="submit">Enviar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <span>Create By <a href="index.html"> OliveiraSW</a></span>
+  </footer>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/custom.js"></script>
 </body>
